--- a/index.html
+++ b/index.html
@@ -1,68 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Voice Assistant UI</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Virtual Assistant UI</title>
     <style>
-        body {
-            background: linear-gradient(to bottom, black, #121212, #1E1E1E);
-            color: white;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 20px;
-        }
-        .container {
-            max-width: 500px;
-            margin: auto;
-            background: #1E1E1E;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(255, 111, 66, 0.3);
-        }
-        input, button {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-            border-radius: 5px;
-        }
-        button {
-            background-color: #FF6F42;
-            border: none;
-            color: white;
-            font-weight: bold;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #E65100;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        .quick-access-button {
-            display: inline-block;
-            margin: 5px;
-            background: gray;
-            padding: 10px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-    </style>
-</head>
-<body>
+      .quick-access-button {
+        display: inline-block;
+        margin: 5px;
+        background: gray;
+        padding: 10px;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+      body {
+        background: linear-gradient(to bottom, black, #121212, #1e1e1e);
+        color: white;
+        font-family: Arial, sans-serif;
+        text-align: center;
+        font-family: Arial, sans-serif;
+        padding: 20px;
+        transition: background 0.3s ease;
+      }
+      .dark-mode {
+        background: linear-gradient(to bottom, black, #121212, #1e1e1e);
+        color: white;
+        transition: background 0.5s ease-in-out, color 0.3s ease-in-out;
+      }
 
+      .light-mode {
+        background: linear-gradient(to bottom, white, #f5f5f5, #e0e0e0);
+        color: white;
+        transition: background 0.5s ease-in-out, color 0.3s ease-in-out;
+      }
+
+      .container {
+        max-width: 600px;
+        margin: auto;
+        background: #1e1e1e;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 5px 15px rgba(255, 111, 66, 0.3);
+      }
+      input,
+      button {
+        width: 100%;
+        padding: 10px;
+        margin-top: 10px;
+        border-radius: 5px;
+        border: 1px solid lightgray;
+      }
+      button {
+        background-color: #ff6f42;
+        border: none;
+        color: white;
+        font-weight: bold;
+        cursor: pointer;
+      }
+      button:hover {
+        background-color: #e65100;
+      }
+      ul {
+        list-style: none;
+        padding: 0;
+      }
+
+      .quick-access-button {
+        display: inline-block;
+        margin: 5px;
+        background: gray;
+        padding: 10px;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      .calendar-day {
+        display: inline-block;
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        text-align: center;
+        margin: 2px;
+        border-radius: 5px;
+        background: #ccc;
+      }
+      .active-day {
+        background: #007bff;
+        color: white;
+      }
+    </style>
+  </head>
+  <body>
     <div class="container">
-        <h2>Voice Assistant UI</h2>
-        <input id="command-input" type="text" placeholder="Say or type a command...">
-        <button id="execute-button">Execute Command</button>
-        <h3>Command History</h3>
-        <ul id="history-list"></ul>
-        <h3>Quick Access Apps</h3>
-        <div id="quick-access-apps"></div>
+      <h2>Virtual Assistant</h2>
+
+      <!-- Theme Toggle -->
+      <button id="toggle-theme">Toggle Dark/Light Mode</button>
+
+      <!-- Command Input -->
+      <input
+        id="command-input"
+        type="text"
+        placeholder="Say or type a command..."
+      />
+      <button id="execute-button">Execute Command</button>
+
+      <!-- Command History -->
+      <h3>Command History</h3>
+      <ul id="history-list"></ul>
+
+      <!-- Quick Access Apps -->
+      <h3>Quick Access Apps</h3>
+      <div id="quick-access-apps"></div>
+
+      <!-- Recently Used Programs -->
+      <h3>Recently Used Programs</h3>
+      <ul id="recent-programs"></ul>
+
+      <!-- Productivity Calendar -->
+      <h3>Productivity Calendar</h3>
+      <div
+        id="productivity-calendar"
+        style="display: flex; flex-wrap: wrap"
+      ></div>
+
+      <!-- PWA Install Button -->
+      <button id="install-pwa" style="display: none">Install as App</button>
+
+      <!-- Translation Feature -->
+      <button id="translate-button">Translate Command</button>
     </div>
 
     <script src="script.js"></script>
-
-</body>
+  </body>
 </html>
